@@ -1,1 +1,2 @@
+- Fixed an issue where the File Upload field generates a validation error when progress is saved on the User Input Step.
 - Fixed an issue when the filter gravityflow_form_ids_status in use with the filter gravityflow_status_filter fetches invalid counters for the Status Page.
